--- a/templates/component/accordion.twig
+++ b/templates/component/accordion.twig
@@ -29,7 +29,7 @@
 
       <button type="button" class="accordion-item__button accordion-item__button--close" aria-controls="{{ controlled_content_id }}" aria-labelledby="{{ close_button_labelled_by_id }}">
         <span class="is-hidden" id="{{ close_button_labelled_by_id }}">{{ 'Close element: '|t({}, {'context': 'The helper text for close accordion visibility button'}) }}{{ heading|default('Missing heading'|t) }}</span>
-        {{ 'Close'|t }}
+        {{ 'Close'|t({}, {'context': 'The text for close accordion visibility button'}) }}
       </button>
     </div>
   </div>
