--- a/templates/content/node--announcement--default.html.twig
+++ b/templates/content/node--announcement--default.html.twig
@@ -8,7 +8,7 @@
 
 {% set link = content.field_announcement_link[0] %}
 
-<div class="announcement js-announcement {{ block_modifier }} container" data-uuid="{{ node.uuid.value }}">
+<section aria-label={{ type_label }} class="announcement js-announcement {{ block_modifier }} container" data-uuid="{{ node.uuid.value }}">
   <div class="announcement__container">
     <div class="announcement__content">
       {% if content.body|render != null %}
@@ -23,7 +23,7 @@
       {% endif %}
     </div>
     <button type="button" class="announcement__close js-announcement__close--disabled" aria-labelledby="announcement__close__aria-label">
-      <span id="announcement__close__aria-label" class="is-hidden">{{ "Close announcement"|t }}</span>
+      <span id="announcement__close__aria-label" class="is-hidden">{{ [close_label, type_label|lower]|join(" ") }}</span>
     </button>
   </div>
-</div>
+</section>
