--- a/templates/content/social-media-links.html.twig
+++ b/templates/content/social-media-links.html.twig
@@ -1,8 +1,7 @@
 <div class="social-media__items">
   {% set classes = ['social-media__item'] %}
   {% for key, element in elements %}
-    {# Only email text is translated #}
-    {% set use_lang_attributes = alternative_language and key != 'email' %}
+    {% set use_lang_attributes = alternative_language %}
 
     {% if element.url and element.img and element.text %}
       {% set link_title %}
