UHF-7420: Switch language switcher to nav-element, add aria-labelledby attribute instead of aria-label to nav-toggle-dropdown, fix typo

--- a/templates/block/block--language-switcher.html.twig
+++ b/templates/block/block--language-switcher.html.twig
@@ -27,8 +27,10 @@
 #}
 
 {% set attributes = attributes.addClass('block--language-switcher') %}
+{% set language_switcher_id = attributes.id ~ '-menu'|clean_id %}
 
-<div{{ attributes.setAttribute('data-hdbt-selector','language-switcher').setAttribute('id', null) }}>
+<nav aria-labelledby="{{ language_switcher_id }}"{{ attributes.setAttribute('data-hdbt-selector','language-switcher').setAttribute('id', null) }}>
+  <span class="is-hidden" id="{{ language_switcher_id }}">{{ 'Select site language'|t({}, {'context': 'Aria label for language switcher'}) }}</span>
   {{ title_prefix }}
   {% if label %}
     <h2{{ title_attributes }}>{{ label }}</h2>
@@ -37,4 +39,4 @@
   {% block content %}
     {{ content }}
   {% endblock %}
-</div>
+</nav>
