--- a/templates/layout/region--header-top.html.twig
+++ b/templates/layout/region--header-top.html.twig
@@ -13,7 +13,7 @@
  */
 #}
 {% if content %}
-  <div class="header-top">
+  <div{{ attributes.addClass(region|clean_class) }}>
     {{ content }}
   </div>
 {% endif %}
