--- a/templates/content/node--announcement--default.html.twig
+++ b/templates/content/node--announcement--default.html.twig
@@ -6,10 +6,23 @@
   {% set block_modifier = 'announcement--notification' %}
 {% endif %}
 
+{% set announcement_attributes = {
+  'class': [
+    'announcement__container',
+  ]
+} %}
+{% if current_langcode != node_langcode %}
+  {% set announcement_attributes = announcement_attributes|merge({
+    'dir': lang_attributes.fallback_dir,
+    'lang': lang_attributes.fallback_lang
+  })
+  %}
+{% endif %}
+
 {% set link = content.field_announcement_link[0] %}
 
 <section aria-label={{ type_label }} class="announcement js-announcement {{ block_modifier }} container" data-uuid="{{ node.uuid.value }}">
-  <div class="announcement__container">
+  <div {{ create_attribute(announcement_attributes) }}>
     <div class="announcement__content">
       {% if content.body|render != null %}
         <span class="announcenemnt__content-body">
