--- a/templates/paragraphs/paragraph--map.html.twig
+++ b/templates/paragraphs/paragraph--map.html.twig
@@ -3,6 +3,6 @@
     title: content.field_map_title,
     description: content.field_map_description,
     map: content.field_map_map,
+    id: paragraph.id(),
   } %}
 {% endblock paragraph %}
-
