UHF-0000: Reduced duplicate code.

--- a/templates/module/helfi_api_base/helfi-link.html.twig
+++ b/templates/module/helfi_api_base/helfi-link.html.twig
@@ -5,23 +5,20 @@
   {% endif %}
 
   {% if 'data-is-external' in attributes|keys %}
-    {% set external_link_id = 'hdbt-link-' ~ random() %}
-    {% set attribute_icon %} <span class="link__type link__type--external" aria-labelledby="{{ external_link_id }}"></span>
-    <span class="is-hidden" id="{{ external_link_id }}" {{ alternative_language ? create_attribute({'lang': lang_attributes.fallback_lang, 'dir': lang_attributes.fallback_dir}) }}>({{ 'Link leads to external service'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link leads to an external service.'}) }})</span>{%- endset %}
+    {% set attribute_icon %}
+      <span class="link__type link__type--external" aria-labelledby="aria-external-link-label"></span>
+    {%- endset %}
   {% endif %}
 
   {% if 'data-protocol' in attributes|keys and attributes['data-protocol'] != 'false'%}
     {% if attributes['data-protocol'] == 'tel' %}
-      {% set tel_aria_id = 'tel-' ~ random() %}
       {% set attribute_icon %}
-        <span class="link__type link__type--tel" aria-labelledby="{{ tel_aria_id }}"></span>
-        <span id="{{ tel_aria_id }}" class="is-hidden" {{ alternative_language ? create_attribute({'lang': lang_attributes.fallback_lang, 'dir': lang_attributes.fallback_dir}) }}>({{ 'Link starts a phone call'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link starts a phone call.'}) }})</span>
+        <span class="link__type link__type--tel" aria-labelledby="aria-tel-link-label"></span>
       {%- endset %}
     {% elseif attributes['data-protocol'] == 'mailto' %}
       {% set email_aria_id = 'email-' ~ random() %}
       {% set attribute_icon %}
-        <span class="link__type link__type--mailto" aria-labelledby="{{ email_aria_id }}"></span>
-        <span id="{{ email_aria_id }}" class="is-hidden" {{ alternative_language ? create_attribute({'lang': lang_attributes.fallback_lang, 'dir': lang_attributes.fallback_dir}) }}>({{ 'Link opens default mail program'|t({}, {'context': 'Explanation for screen-reader software that the icon visible next to this link means that the link opens default mail program.'}) }})</span>
+        <span class="link__type link__type--mailto" aria-labelledby="aria-mailto-link-label"></span>
       {%- endset %}
     {% endif %}
   {% endif %}
