UHF-8085: Add accordion button text color fix again after bad merge

--- a/src/scss/06_components/paragraphs/_accordion.scss
+++ b/src/scss/06_components/paragraphs/_accordion.scss
@@ -38,6 +38,7 @@
 .accordion-item__button--toggle {
   @include font('h4');
   border: none;
+  color: $color-black;
   padding-block: $spacing;
   padding-inline-end: 60px;
   position: relative;
