UHF-7842: Moved the skip map links closer to the map iframe, created general skip-link style class and fixed small layout issue on skip links

--- a/src/scss/06_components/navigation/__index.scss
+++ b/src/scss/06_components/navigation/__index.scss
@@ -8,6 +8,7 @@
 @import 'language-switcher';
 @import 'local-tasks';
 @import 'sidebar-menu';
+@import 'skip-link';
 @import 'skip-to-main';
 @import 'table-of-contents';
 @import 'tabs';
