--- a/src/scss/06_components/navigation/_skip-to-main.scss
+++ b/src/scss/06_components/navigation/_skip-to-main.scss
@@ -1,46 +1,12 @@
-.skip-to-main {
-  --border-width: 2px;
-  --border-color: var(--color-white);
-  --outline-width: 3px;
-  --background-color: var(--hdbt-color-black);
-  --color: var(--color-white);
-  --focus-outline-color: var(--hdbt-color-black);
-  word-wrap: normal;
-  background-color: var(--background-color);
-  border: var(--border-width) solid var(--border-color);
-  color: var(--color);
-  font-weight: $font-weight-medium;
-  left: 50%;
-  position: absolute;
-  scroll-margin-top: 105px; // Amount of air that should be left when scrolled to top.
-  text-decoration: none;
+.skip-link--skip-to-main {
   top: 0;
-  transform: translate(-50%, 0);
-  transition: transform ease-out 0.2s;
-  width: fit-content; // This avoids pushing the content to two rows until absolutely necessary
-  z-index: 2;
-
-  &:not(:focus) {
-    @include visually-hidden;
-  }
-
-  @include breakpoint($breakpoint-m) {
-    scroll-margin-top: 24px; // Amount of air that should be left when scrolled to top.
-  }
 
   &:focus,
   &:active {
-    outline: var(--outline-width) solid var(--focus-outline-color);
-    outline-offset: 0; // Chrome has a bug that shows a small offset when focused with keyboard instead of developer tools. This combats that problem.
-    padding: $spacing-half $spacing-and-half;
     transform: translate(-50%, 102px); // A little overlap with language switcher header on mobile.
 
     @include breakpoint($breakpoint-m) {
       transform: translate(-50%, 24px); // Half of the top navigation bar.
     }
-  }
-
-  &:hover {
-    text-decoration: underline;
   }
 }
