--- a/templates/media/media--hel-map.html.twig
+++ b/templates/media/media--hel-map.html.twig
@@ -35,6 +35,13 @@
 {% set media_attributes = media.field_media_hel_map %}
 {% set link = content.field_media_hel_map.0['#link'] %}
 
+{% set after_map_id = 'map-' ~ media_id ~ random() ~ '-after'|clean_id %}
+{% set before_map_id = 'map-' ~ media_id ~ random() ~ '-before'|clean_id %}
+
+<a href="#{{ after_map_id }}" id="{{ before_map_id }}" class="focusable skip-link skip-link--map--before">
+  {{ 'Continue below the map'|t({}, {'context': 'Skip link before the map for the map paragraph'}) }}
+</a>
+
 {% include '@hdbt/misc/embedded-content-cookie-compliance.twig' with {
   media_url: media_url,
   media_id: media.id,
@@ -60,4 +67,9 @@
   }
 } %}
 {{ drupal_settings }}
+
+<a href="#{{ before_map_id }}" id="{{ after_map_id }}" class="focusable skip-link skip-link--map--after">
+  {{ 'Continue above the map'|t({}, {'context': 'Skip link after the map for the map paragraph'}) }}
+</a>
+
 {{ link(link['#title'], link['#url'], link['#attributes']|merge({'class': 'map__external-link'})) }}
