--- a/templates/content/node--announcement--default.html.twig
+++ b/templates/content/node--announcement--default.html.twig
@@ -8,7 +8,7 @@
 
 {% set link = content.field_announcement_link[0] %}
 
-<section aria-label={{ type_label }} class="announcement js-announcement {{ block_modifier }} container" data-uuid="{{ node.uuid.value }}">
+<section aria-label="{{ type_label }}" class="announcement js-announcement {{ block_modifier }} container" data-uuid="{{ node.uuid.value }}">
   <div class="announcement__container">
     <div class="announcement__content">
       {% if content.body|render != null %}
