UHF-7842: Add prefers reduced motion media-query for the skip link

--- a/src/scss/06_components/navigation/_skip-link.scss
+++ b/src/scss/06_components/navigation/_skip-link.scss
@@ -20,6 +20,10 @@
   transition: transform ease-out 0.2s;
   width: max-content; // This avoids pushing the content to two rows until absolutely necessary
   z-index: 2;
+  
+  @media (prefers-reduced-motion) {
+    transition: none;
+  }
 
   &:not(:focus) {
     @include visually-hidden;
