Fixed typo on news page tag listing element that prevented news tags being rendered

--- a/templates/module/helfi-news-item/node--news-item.html.twig
+++ b/templates/module/helfi-news-item/node--news-item.html.twig
@@ -82,7 +82,7 @@
     {# Tags #}
     {% include "@hdbt/misc/news-tags.twig" with
       {
-        tags: content.news_item_tags,
+        tags: content.field_news_item_tags,
         neighbourhoods: content.field_news_neighbourhoods,
         groups: content.field_news_groups,
       }
