UHF-8431: Add missing comma to the address line

--- a/templates/misc/address-plain.html.twig
+++ b/templates/misc/address-plain.html.twig
@@ -44,7 +44,7 @@
     <span class="organization">{{ organization }}</span>
   {% endif %}
   {% if address_line1 %}
-    <span class="address-line1">{{ address_line1 }}</span>
+    <span class="address-line1">{{ address_line1 }}, </span>
   {% endif %}
   {% if address_line2 %}
     <span class="address-line2">{{ address_line2 }}</span>
