--- a/templates/misc/tag-list.twig
+++ b/templates/misc/tag-list.twig
@@ -4,8 +4,10 @@
   {% set type_class = 'content-tags__tags--static' %}
 {% endif %}
 
-<section class="content-tags {{ tag_container_class }}"  aria-labelledby='content-tags__label'>
-  <span id='content-tags__label' class='is-hidden' {{ alternative_language ? create_attribute(({ 'lang': lang_attributes.fallback_lang, 'dir': lang_attributes.fallback_dir })) }}>
+{% set content_tags_id = 'hdbt-content_tags_id-' ~ random() %}
+
+<section class="content-tags {{ tag_container_class }}"  aria-labelledby="{{ content_tags_id }}">
+  <span id="{{ content_tags_id }}" class="is-hidden" {{ alternative_language ? create_attribute(({ 'lang': lang_attributes.fallback_lang, 'dir': lang_attributes.fallback_dir })) }}>
     {{ 'Tags'|t({}, {'context': 'Label for screen reader software users explaining that this is a list of tags related to this page.'}) }}
   </span>
   <ul class="content-tags__tags {{ type_class }}">
