UHF-8501: Change the icon size to same as the body line-height in earlry childhood calculator total explanation

--- a/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
+++ b/src/scss/06_components/helfi_calculator/_helfi_calculator.scss
@@ -264,9 +264,8 @@
     &::before {
       @include pseudo-icon('info-circle');
 
-      --icon-size: #{$spacing-and-half};
+      --icon-size: #{get-line-height('body', true)};
       flex-shrink: 0;
-      margin-top: 2px; // Adjusting the icon position to align with the text.
     }
   }
 
