UHF-8419: Fix padding for <nolink> items in the top menu

--- a/src/scss/06_components/navigation/global/_mmenu.scss
+++ b/src/scss/06_components/navigation/global/_mmenu.scss
@@ -310,7 +310,8 @@ $-footerlink-target-size: 44px;
     padding: 0;
   }
 
-  .menu__link {
+  .menu__link,
+  span.menu__item--nolink {
     $-footer-link-font: 'body';
     $-footer-link-vertical-padding: 0.5 * ($-footerlink-target-size - get-line-height($-footer-link-font, true));
 
