UHF-8554: Test protected branch

--- a/src/scss/06_components/_throbber.scss
+++ b/src/scss/06_components/_throbber.scss
@@ -1,5 +1,5 @@
 .hds-loading-spinner {
-  color: red;
+  color: yellow;
   /* Can't do center:50% middle: 50%, so approximate it for a typical window size. */
   left: 49%; /* LTR */
   position: fixed;
