UHF-8196: Add styles for unpublished menu links, add the variables for templates with logic still missing from them

--- a/src/scss/06_components/navigation/_menu.scss
+++ b/src/scss/06_components/navigation/_menu.scss
@@ -10,3 +10,7 @@
   // Hide icons by default so that they aren't displayed accidentally somewhere where they have no styles defined.
   display: none;
 }
+
+.menu__link--unpublished {
+  color: var(--color-error);
+}
