UHF-8196: Add styles for unpublished content cards and content liftups, add class indicating publish status for tpr-unit--wide-teaser without logic

--- a/src/scss/06_components/navigation/_sidebar-menu.scss
+++ b/src/scss/06_components/navigation/_sidebar-menu.scss
@@ -51,6 +51,10 @@ $-outline-width: 3px;
 
     &.sidebar-navigation__title-link--unpublished {
       color: var(--color-error);
+
+      &::before {
+        background-color: var(--color-error);
+      }
     }
 
   }
