UHF-8196: Add styles for unpublished tpr service, add logic that checks the publish state of the service

--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -49,6 +49,10 @@ $teaser-icon-size-desktop: 48px;
   }
 }
 
+.service--teaser--unpublished {
+  color: var(--color-error);
+}
+
 .service__link {
   border: 1px solid $color-black;
   display: block;
