--- a/templates/module/helfi_tpr/tpr-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-service.html.twig
@@ -37,7 +37,17 @@
 
 {% elseif view_mode == 'teaser' %}
 
-  <div class="service service--teaser">
+  {%
+    set service_classes = [
+      'service',
+      'service--teaser',
+      service_unpublished ? 'service--teaser--unpublished',
+    ]
+  %}
+
+  {% set wrapper_attributes = create_attribute() %}
+
+  <div{{ wrapper_attributes.addClass(service_classes) }}>
     <a href="{{ url('entity.tpr_service.canonical', { 'tpr_service': entity.id() }) }}" class="service__link">
       <h3 class="service__title">
         {{ entity.label }}
