UHF-8196: Add unpublished card styles, add the modifier class to unit teasers with image

--- a/src/scss/05_objects/_card.scss
+++ b/src/scss/05_objects/_card.scss
@@ -87,6 +87,20 @@ $item-gap: $spacing-half;
   }
 }
 
+.card--unpublished {
+  color: var(--color-error);
+  outline: 2px solid var(--color-error);
+  outline-offset: -2px;
+
+  .card__link {
+    color: var(--color-error);
+  }
+
+  .card__text::after {
+    background-color: var(--color-error);
+  }
+}
+
 .card--external .link__type--external {
   @include visually-hidden; // Avoid two arrows on card visually, but let screen readers see it.
 }
