--- a/src/scss/06_components/pages/_service.scss
+++ b/src/scss/06_components/pages/_service.scss
@@ -49,8 +49,20 @@ $teaser-icon-size-desktop: 48px;
   }
 }
 
-.service--teaser--unpublished {
+.service.service--teaser--unpublished {
   color: var(--color-error);
+
+  .service__link {
+    border-color: var(--color-error);
+    color: var(--color-error);
+
+    &::before {
+      opacity: 30%;
+    }
+  }
+  .hel-icon {
+    background-color: var(--color-error);
+  }
 }
 
 .service__link {
