--- a/templates/module/helfi_tpr/tpr-unit--minimal.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit--minimal.html.twig
@@ -14,8 +14,15 @@
     }]) %}
 {% endif %}
 
+{%
+  set card_tpr_classes = [
+  unit_unpublished ? 'card--unpublished',
+  'card--tpr-minimal',
+]
+%}
+
 {% embed '@hdbt/component/card.twig' with {
-  card_modifier_class: 'card--tpr-minimal',
+  card_modifier_class: card_tpr_classes|join(' '),
   card_title: entity.label,
   card_url: unit_url,
   card_tags: card_tags,
