--- a/templates/content/node--announcement--default.html.twig
+++ b/templates/content/node--announcement--default.html.twig
@@ -35,8 +35,9 @@
         </div>
       {% endif %}
     </div>
-    <button type="button" class="announcement__close js-announcement__close--disabled" aria-labelledby="announcement__close__aria-label">
-      <span id="announcement__close__aria-label" class="is-hidden">{{ [close_label, type_label|lower]|join(" ") }}</span>
+    {% set announcement_close_labelled_by = "announcement__close__aria-label--" ~ random() %}
+    <button type="button" class="announcement__close js-announcement__close--disabled" aria-labelledby="{{announcement_close_labelled_by}}">
+      <span id="{{announcement_close_labelled_by}}" class="is-hidden">{{ [close_label, type_label|lower]|join(" ") }}</span>
     </button>
   </div>
 </section>
