UHF-8196: Switched logic to check if content is published instead of unpublished on tpr-entity and menu item unpublished classes

--- a/templates/block/block--main-navigation-level-2.html.twig
+++ b/templates/block/block--main-navigation-level-2.html.twig
@@ -42,7 +42,7 @@
 {% set link_attributes = {
   'class': [
     'sidebar-navigation__title-link',
-    menu_link_parent.unpublished ? 'sidebar-navigation__title-link--unpublished',
+    not menu_link_parent.published ? 'sidebar-navigation__title-link--unpublished',
   ],
 } %}
 
