--- a/templates/module/helfi_tpr/tpr-service--teaser-search-result.html.twig
+++ b/templates/module/helfi_tpr/tpr-service--teaser-search-result.html.twig
@@ -1,6 +1,6 @@
 {%
   set card_tpr_classes = [
-  service_unpublished ? 'card--unpublished',
+  not service_published ? 'card--unpublished',
   'card--tpr-service-teaser',
 ]
 %}
