--- a/templates/module/helfi_tpr/tpr-unit--minimal.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit--minimal.html.twig
@@ -16,7 +16,7 @@
 
 {%
   set card_tpr_classes = [
-  unit_unpublished ? 'card--unpublished',
+  not unit_published ? 'card--unpublished',
   'card--tpr-minimal',
 ]
 %}
