--- a/templates/module/helfi_tpr/tpr-unit--teaser-with-image.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit--teaser-with-image.html.twig
@@ -14,7 +14,7 @@
 
 {%
   set card_tpr_classes = [
-    unit_unpublished ? 'card--unpublished',
+    not unit_published ? 'card--unpublished',
     'card--tpr-teaser',
   ]
 %}
