UHF-3511: Add user-edited-content class to wrap custom html

--- a/templates/component/remote-video.twig
+++ b/templates/component/remote-video.twig
@@ -21,6 +21,6 @@
     {% if video_title|render %}
       <{{ video_title_level }} class="remote-video__video-title">{{ video_title }}</{{ video_title_level }}>
     {% endif %}
-    <div class="remote-video__video-desc">{{ video_desc }}</div>
+    <div class="remote-video__video-desc user-edited-content">{{ video_desc }}</div>
   {% endblock component_content %}
 {% endembed %}
