--- a/templates/misc/component.twig
+++ b/templates/misc/component.twig
@@ -59,7 +59,7 @@ Example usage:
     {% endif %}
 
     {% if component_description|render %}
-      <div class="component__description">
+      <div class="component__description user-edited-content">
         {{ component_description}}
       </div>
     {% endif %}
