--- a/templates/module/helfi_tpr/tpr-errand-service.html.twig
+++ b/templates/module/helfi_tpr/tpr-errand-service.html.twig
@@ -48,7 +48,7 @@
                 'component--hardcoded',
                 'errand-service__accordion',
               ],
-              component_content_class: 'accordion',
+              component_content_class: ['accordion', 'user-edited-content'],
             }
           %}
             {% block component_content %}
