--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -54,7 +54,7 @@
   {# End of Main image #}
 
   {% if content.description|render and hide_description == false %}
-    <div class="long-desc">
+    <div class="long-desc user-edited-content">
       {{ content.description }}
     </div>
   {% endif %}
