--- a/templates/paragraphs/paragraph--banner.html.twig
+++ b/templates/paragraphs/paragraph--banner.html.twig
@@ -67,7 +67,7 @@
               <h2 class="banner__title">{{ content.field_banner_title }}</h2>
             {% endif %}
             {% if has_description %}
-              <div class="banner__desc">{{ content.field_banner_desc }}</div>
+              <div class="banner__desc user-edited-content">{{ content.field_banner_desc }}</div>
             {% endif %}
           </div>
           {% if has_link %}
