--- a/templates/paragraphs/paragraph--sidebar-text.html.twig
+++ b/templates/paragraphs/paragraph--sidebar-text.html.twig
@@ -54,7 +54,7 @@
       </h2>
     {% endif %}
     {% if content.field_sidebar_text_text|render %}
-      <div class="sidebar-text__text-content">
+      <div class="sidebar-text__text-content user-edited-content">
         {{ content.field_sidebar_text_text }}
       </div>
     {% endif %}
