--- a/templates/paragraphs/paragraph--hero.html.twig
+++ b/templates/paragraphs/paragraph--hero.html.twig
@@ -53,7 +53,7 @@
               design == "with-image-bottom" or
               design == "diagonal"
             %}
-              <div class="hero__description">
+              <div class="hero__description user-edited-content">
                 {{ description }}
               </div>
             {% endif %}
