--- a/templates/paragraphs/paragraph--liftup-with-image.html.twig
+++ b/templates/paragraphs/paragraph--liftup-with-image.html.twig
@@ -37,7 +37,7 @@
         <div class="liftup-with-image__content">
           <h2 class="liftup-with-image__title">{{ content.field_liftup_with_image_title }}</h2>
           {% if content.field_liftup_with_image_desc|render %}
-            <div class="liftup-with-image__desc">{{ content.field_liftup_with_image_desc }}</div>
+            <div class="liftup-with-image__desc user-edited-content">{{ content.field_liftup_with_image_desc }}</div>
           {% endif %}
         </div>
       </div>
