--- a/templates/paragraphs/paragraph--phasing-item.html.twig
+++ b/templates/paragraphs/paragraph--phasing-item.html.twig
@@ -11,7 +11,7 @@
       {{ content.field_title}}
     </p>
     {% if content.field_description|render %}
-      <div class="phasing__item-description">
+      <div class="phasing__item-description user-edited-content">
         {{ content.field_description}}
       </div>
     {% endif %}
