--- a/templates/paragraphs/paragraph--text.html.twig
+++ b/templates/paragraphs/paragraph--text.html.twig
@@ -1,5 +1,8 @@
 {% block paragraph %}
-  {% embed "@hdbt/misc/component.twig" with { component_classes: [ 'component--paragraph-text' ], } %}
+  {% embed "@hdbt/misc/component.twig" with {
+    component_classes: [ 'component--paragraph-text' ],
+    component_content_class: [ 'user-edited-content' ], 
+  } %}
     {% block component_content %}
 
       {{ content }}
