UHF-8196: Unified variable that indicates entity publish state between services and units

--- a/templates/module/helfi_tpr/tpr-service--teaser-search-result.html.twig
+++ b/templates/module/helfi_tpr/tpr-service--teaser-search-result.html.twig
@@ -1,6 +1,6 @@
 {%
   set card_tpr_classes = [
-  not service_published ? 'card--unpublished',
+  not content_entity_published ? 'card--unpublished',
   'card--tpr-service-teaser',
 ]
 %}
