--- a/templates/module/helfi_tpr/tpr-unit--wide-teaser.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit--wide-teaser.html.twig
@@ -1,7 +1,7 @@
 {%
   set content_liftup_classes = [
     'content-liftup',
-    not unit_published ? 'content-liftup--unpublished',
+    not content_entity_published ? 'content-liftup--unpublished',
   ]
 %}
 
