UHF-8568: Fix contrast on Metro palette

--- a/src/scss/color-palette.scss
+++ b/src/scss/color-palette.scss
@@ -89,7 +89,7 @@
   --hdbt-color-palette--secondary: rgb(255, 240, 247);
   --hdbt-color-palette--accent: rgb(194, 162, 81);
 
-  --hdbt-color-palette-text--primary: #{$hdbt-color-white};
+  --hdbt-color-palette-text--primary: #{$hdbt-color-black};
   --hdbt-color-palette-text--secondary: #{$hdbt-color-black};
   --hdbt-color-palette-text--accent: #{$hdbt-color-black};
 
