UHF-8465: Changed the See content on external site links to include the iframe title for screenreaders

--- a/templates/media/media--hel-map.html.twig
+++ b/templates/media/media--hel-map.html.twig
@@ -45,6 +45,7 @@
 {% include '@hdbt/misc/embedded-content-cookie-compliance.twig' with {
   media_url: media_url,
   media_id: media.id,
+  media_iframe_title: iframe_title,
   media_service_url: map_service_url,
   privacy_policy_url: privacy_policy_url,
 } %}
