--- a/templates/misc/embedded-content-cookie-compliance.twig
+++ b/templates/misc/embedded-content-cookie-compliance.twig
@@ -15,14 +15,13 @@
           'hds-button--primary',
         ]
       } %}
-
       {% set external_link_title %}
         {% set button_labelled_by_id = 'button__external-aria-label--' ~ random()|clean_id %}
         <span class="is-hidden" id="{{ button_labelled_by_id }}">
-          {{ media_iframe_title }}
+          {{- media_iframe_title -}}
         </span>
         <span class="hds-button__label" aria-labelledby="{{ button_labelled_by_id }}">
-          {{ 'See content on external site'|t }}
+          {{- 'See content on external site'|t -}}
         </span>
       {% endset %}
 
